# Dron

catkin_ws/devel/: local_setup.sh
catkin_ws/devel/include/modrob_control_kinematics/: ControlVelocityDesired.h
catkin_ws/devel/include/modrob_control_wiimote/: CartVelConfigCommanded.h  IrSourceInfo.h  State.h  TimedSwitch.h
catkin_ws/devel/include/modrob_simulation/: JointConfigCommanded.h  JointConfigMeasured.h  JointDescription.h  LinkCollision.h  LinkDescription.h  LinkVisual.h  Modes.h  RobotConfigCommanded.h  RobotConfigMeasured.h  RobotDescription.h  RobotGroupDescription.h  RobotGroupModuleOrder.h  RobotModuleOrder.h
catkin_ws/devel/include/modrob_visualization/: Modes.h
catkin_ws/devel/include/modrob_workstation/: JointConfigCommanded.h  JointConfigMeasured.h  JointDescription.h  JointSelection.h  LinkCollision.h  LinkDescription.h  LinkVisual.h  ModuleOrder.h  RobotConfigCommanded.h  RobotConfigMeasured.h  RobotDescription.h  RobotStateCommanded.h
catkin_ws/devel/include/motion_planning/: Poses.h  (+1 more)
drone/: README.md
drone/catkin_ws/src/orchestrator/: CMakeLists.txt  package.xml
drone/catkin_ws/src/orchestrator/launch/: run.launch
drone/catkin_ws/src/orchestrator/scripts/: connect  handleNode
drone/catkin_ws/src/orchestrator/scripts/ddpg/: __init__.py
drone/catkin_ws/src/orchestrator/scripts/ddpg/agents/: __init__.py  actor.py  critic.py  ddpg.py
drone/catkin_ws/src/orchestrator/scripts/ddpg/tasks/: __init__.py  takeoff.py
drone/orchestrator/Linux_build_Data/: ScriptingAssemblies.json  globalgamemanagers  globalgamemanagers.assets  level0
(+313 files in other folders)
